improved background interaction, fixed color shifting

--- a/assets/common/css/homePage.css
+++ b/assets/common/css/homePage.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 #project-list {
-    padding: 2em;
+    margin: 2em;
 }
 
 .project-list-item {
